tests/rascal/negative/parse_errors/L2/forloop2.ob
MODULE Bla;

BEGIN
  FOR i := 0 TO 5 BY DO
    x := 1
  END
END Bla.